# mcp-web-search

./: .env.example  .gitignore  README.md  app.py  cache.py  config.py  crawler.py  main.py  manifest.json  pyproject.toml  rate_limiter.py  search_client.py  server.py  service.py  summarizer.py  telemetry.py  tools.py
docker/: Dockerfile
docs/: mcp_web_search_plan.md
tests/: __init__.py  test_duckduckgo_html.py  test_rate_limiter.py  test_service.py
tests/mocks/: duckduckgo_redirect.html  duckduckgo_weather.html
